<resources>
    <string name="app_name">LaunderUp</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">LOGIN</string>
    <string name="facebook_app_id">520532243200592</string>
    <string name="fb_login_protocol_scheme">fb520532243200592</string>
    <string name="facebook_client_token">860f9eec3b4b363d6c4ef5409df75fa2</string>
    //facebook strings need to be changed while using launder_up official email

    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pin_code">PinCode</string>
    <string name="register">Register</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="services">Services</string>
    <string name="ironing">IRONING</string>
    <string name="dry_cleaning">DRY CLEANING</string>
    <string name="laundry">LAUNDRY</string>
    <string name="steam_ironing">STEAM IRONING</string>
    <string name="express">Express</string>
    <string name="need_help">Need Help</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="about_us_text">LaunderUp is a property of LaunderUp, an Indian Company registered under the Companies Act,
        2013 having its registered office at C—20, 110, LORD KRISHNA APARTMENT, OM VIHAR, UTTAM NAGAR Delhi - 110059</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="express_ironing">Express Ironing</string>
    <string name="express_laundry">Express Laundry</string>
    <string name="express_dry_cleaning">Express Dry Cleaning</string>
    <string name="express_steam_ironing">Express Steam Ironing</string>
    <string name="express_services">Express Services</string>
    <string name="express_button">Express Button</string>
    <string name="how_to_order">How to Order?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone: </string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="status">Status</string>
    <string name="order_history">Order History</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="Continue">Continue</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_book">Address Book</string>
    <string name="add_address">Add Address</string>
    <string name="save_address">Save Address</string>
    <string name="feedback">Feedback</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="summary">Summary</string>
    <string name="place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="change_address">Change Address</string>
    <string name="order_status">Order Status</string>
    <string name="registered_shops">Registered Shops</string>
</resources>