<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.view.activities.LanguageModalBottomSheet"
    android:paddingBottom="20dp">

        <TextView
            android:id="@+id/select_language_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="@drawable/lan_bottom_sheet_top"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/select_language_text"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/english"
            android:buttonTint="#006FB9"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hindi"
            android:buttonTint="#006FB9"
            android:textSize="20sp"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>