<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/profile_top_bg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/rectangle_54back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/profile_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/profile_top_bg"
            android:layout_alignTop="@id/profile_top_bg"
            android:layout_alignBottom="@id/profile_top_bg"
            android:layout_marginBottom="90sp"
            android:padding="40dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="#ffffff"
            android:textSize="39sp" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/clothimg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/circle_back"
            android:padding="12dp"
            android:elevation="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_top"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_top"
        app:layout_constraintStart_toEndOf="@id/profile_name_tv"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_phone_number_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/email_id"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_phone_number"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/address"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/profile_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/order_history_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Order History"
        app:layout_constraintTop_toBottomOf="@id/profile_address_tv"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#ffffff"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/edit_profile"
        app:layout_constraintTop_toBottomOf="@id/order_history_btn"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#ffffff"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_btn"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#23A7FF"/>
</androidx.constraintlayout.widget.ConstraintLayout>