<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.view.activities.ExpressModalBottomSheet"
    android:paddingBottom="20dp">
    
    <TextView
        android:id="@+id/bottom_sheet_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lan_bottom_sheet_top"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/express_services"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:id="@+id/express_ironing_view"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_top" 
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/iron_img_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30sp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/circle_back"
            android:elevation="3dp"
            android:padding="20dp"
            android:src="@drawable/ironing"
            />

        <TextView
            android:id="@+id/iron_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/express_ironing"
            android:textColor="#000000"
            android:textSize="17sp" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/express_laundry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/express_ironing_view"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/laundry_img_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/circle_back"
            android:elevation="3dp"
            android:padding="20dp"
            android:src="@drawable/laundry"/>

        <TextView
            android:id="@+id/laundry_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/express_laundry"
            android:textColor="#000000"
            android:layout_marginStart="20dp"
            android:textSize="17sp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/express_dry_clean_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/express_laundry_view"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/dry_clean_img_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/circle_back"
        android:elevation="3dp"
        android:padding="20dp"
        android:src="@drawable/dry_cleaning"/>

    <TextView
        android:id="@+id/dry_clean_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/express_dry_cleaning"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/express_steam_iron_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/express_dry_clean_view"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/steam_iron_img_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/circle_back"
        android:elevation="3dp"
        android:padding="20dp"
        android:src="@drawable/steam_ironing"/>

    <TextView
        android:id="@+id/steam_iron_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/express_steam_ironing"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:textSize="17sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>