<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.HomeFragment">

    <ImageView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_baseline_translate_24"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/three_dots"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/bottomSheetStyle"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/services_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:textColor="#0050E0"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/iron_card"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintTop_toBottomOf="@id/services_text"
        app:layout_constraintStart_toStartOf="@id/services_text"
        android:layout_marginTop="50dp"
        android:elevation="10dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iron_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ironing"
            android:layout_marginBottom="10dp"
            android:padding="30dp"/>

        <TextView
            android:id="@+id/iron_card_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/ironing"
            android:textColor="#000000" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/laundry_card"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/iron_card"
        app:layout_constraintStart_toStartOf="@id/iron_card">

        <ImageView
            android:id="@+id/laundry_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/laundry"
            android:padding="35dp"/>

        <TextView
            android:id="@+id/laundry_card_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/laundry"
            android:textColor="#000000" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dry_clean_card"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintTop_toBottomOf="@id/services_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/dry_clean_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dry_cleaning"
            android:layout_marginBottom="10dp"
            android:padding="35dp"/>

        <TextView
            android:id="@+id/dry_clean_card_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dry_cleaning"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"/>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/steam_iron_card"
        android:layout_width="145dp"
        android:layout_height="145dp"
        app:layout_constraintTop_toBottomOf="@id/dry_clean_card"
        app:layout_constraintEnd_toEndOf="@id/dry_clean_card"
        android:layout_marginTop="50dp"
        android:elevation="10dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/steam_iron_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/steam_ironing"
            android:layout_marginBottom="10sp"
            android:padding="30dp"/>

        <TextView
            android:id="@+id/steam_iron_card_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steam_ironing"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"/>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>